--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
-pip install python-dotenv
-pip install flask
-pip install pymysql
+pip3 install --upgrade pip
+pip3 install python-dotenv
+pip3 install flask
+pip3 install pymysql
